# rust-particle-simulator

./: Cargo.toml  README.md
src/: canvas.rs  fast_drop_simulation.rs  main.rs  particle.rs
