[package]
name = "eguiparticles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.25.0"
egui-wgpu = "0.25.0"
egui_extras = { version = "0.25.0", features = ["image"] }
env_logger = "0.10.1"
epaint = "0.25.0"
fastrand = "2.0.1"
wgpu = "0.18.0"
winit = { version = "0.29.9", featuires = ["winit "] }
